--- a/Código Fonte/Android/app/src/main/res/values/strings.xml
+++ b/Código Fonte/Android/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_player">Player</string>
     <string name="title_activity_home">Home</string>
+    <string name="home_search_hint">Buscar</string>
 </resources>
